force-app/main/default/objects/Plan_SubHierarchy__c/Plan_SubHierarchy__c.object-meta.xml
<CustomObject>
    <label>Plan SubHierarchy</label>
    <nameField>
        <displayFormat>PSH - {000}</displayFormat>
        <label>Plan SubHi Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan SubHierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>