force-app/main/default/objects/Plan_SubHierarchy__c/fields/Dataset3__c.field-meta.xml
<CustomField>
    <fullName>Dataset3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset3</label>
    <referenceTo>Dataset3__c</referenceTo>
    <relationshipLabel>Plan SubHierarchy</relationshipLabel>
    <relationshipName>Plan_SubHierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>