force-app/main/default/objects/Plan_SubHierarchy__c/fields/Plan_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Hierarchy</label>
    <referenceTo>Plan_Hierarchy__c</referenceTo>
    <relationshipLabel>Plan SubHierarchy</relationshipLabel>
    <relationshipName>Plan_SubHierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>