force-app/main/default/objects/Plan_SubHierarchy__c/fields/Plan_Hierarchy_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Hierarchy_Name__c</fullName>
    <label>Plan Hierarchy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>