force-app/main/default/objects/Plan_SubHierarchy__c/fields/Plan_SubHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_SubHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan SubHierarchy</label>
    <referenceTo>Plan_SubHierarchy__c</referenceTo>
    <relationshipLabel>Plan SubHierarchy</relationshipLabel>
    <relationshipName>Plan_SubHierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>