force-app/main/default/objects/Plan_SubHierarchy__c/fields/Template_Problem__c.field-meta.xml
<CustomField>
    <fullName>Template_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Problem</label>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Plan SubHierarchy (Template Problem)</relationshipLabel>
    <relationshipName>Plan_SubHierarchy_Template</relationshipName>
    <type>Lookup</type>
</CustomField>