force-app/main/default/objects/Plan_SubHierarchy__c/fields/Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>Plan SubHierarchy</relationshipLabel>
    <relationshipName>Plan_SubHierarchy_TP</relationshipName>
    <type>Lookup</type>
</CustomField>