force-app/main/default/objects/Plan_SubHierarchy__c/recordTypes/Treatment_Plan_Recordtype3.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Plan_Recordtype3</fullName>
    <active>true</active>
    <label>Treatment Plan Recordtype3 (Objective)</label>
</RecordType>