force-app/main/default/objects/Plan_SubHierarchy__c/recordTypes/Treatment_Plan_Recordtype4.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Plan_Recordtype4</fullName>
    <active>true</active>
    <label>Treatment Plan Recordtype4 (Intervention)</label>
</RecordType>